refactor utility functions for queries into its own class